Alt Key add Save Configration

--- a/cabaltranier/cabaltranier/App.config
+++ b/cabaltranier/cabaltranier/App.config
@@ -1,6 +1,174 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="cabaltranier.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <cabaltranier.Properties.Settings>
+            <setting name="checkBox1" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBox2" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBox3" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checksave" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBox4" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBox5" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBox6" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBox7" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBox8" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBox9" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBox10" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBoxYil" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBoxEs" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBox11" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBox12" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBoxAlt1" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBoxAlt2" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBoxAlt3" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBoxAlt4" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBoxAlt5" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBoxAlt7" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBoxAlt6" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBoxAlt8" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBoxAlt9" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBoxAlt0" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBoxAltYil" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="checkBoxAltEs" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="textBox1" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox2" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox3" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox4" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox5" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox6" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox7" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox8" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox9" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox10" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox25" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox24" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox26" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox11" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox22" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox21" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox20" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox19" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox18" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox17" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox16" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox15" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox14" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox13" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox12" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textBox23" serializeAs="String">
+                <value />
+            </setting>
+        </cabaltranier.Properties.Settings>
+    </userSettings>
 </configuration>
