--- a/cabaltranier/cabaltranier/cabaltranier.csproj
+++ b/cabaltranier/cabaltranier/cabaltranier.csproj
@@ -42,7 +42,7 @@
     <OutputPath>bin\x86\Release\</OutputPath>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>keyboard__1__X8t_icon.ico</ApplicationIcon>
+    <ApplicationIcon>keyboard__2__wLH_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AutoItX3.Assembly, Version=3.0.0.0, Culture=neutral, PublicKeyToken=a646454c8d475470, processorArchitecture=MSIL">
@@ -99,6 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="keyboard__1__X8t_icon.ico" />
+    <Content Include="keyboard__2__wLH_icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AutoItX.Dotnet.3.3.14.2\build\AutoItX.Dotnet.targets" Condition="Exists('..\packages\AutoItX.Dotnet.3.3.14.2\build\AutoItX.Dotnet.targets')" />
